--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:theme="@style/AppTheme">
         <activity android:name=".practice1.Practice1Activity"></activity>
         <activity android:name=".practice2.Practice2Activity"></activity>
+        <activity android:name=".practice3.Practice3Activity"></activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
